Add navbar and search form

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
   <title>Google</title>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div>
-  <img class="logo" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" atl="Google Logo" />
+  <div class="navbar">
+    <ul>
+      <li><a href="#">Gmail</a></li>
+      <li><a href="#">Images</a></li>
+      <li><a href="#"><i class="fa fa-th fa-lg" aria-hidden="true"></i></a></li>
+    </ul>
+  <div class="logo">
+  <img class="logoimage" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" atl="Google Logo" />
 </div>
 <div class="searchbar">
-<input title="search" type="text">
+  <form>
+<input class="search" title="search" type="text"/>
+</form>
 </div>
 </body>
 </html>
