--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <li><a href="#">Gmail</a></li>
       <li><a href="#">Images</a></li>
       <li><a href="#"><i class="fa fa-th fa-lg" aria-hidden="true"></i></a></li>
+<li><a>Bell</a></li>
+<li><a>Account</a></li>
     </ul>
   <div class="logo">
   <img class="logoimage" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" atl="Google Logo" />
@@ -19,6 +21,26 @@
   <form>
 <input class="search" title="search" type="text"/>
 </form>
+</div>
+<div class="buttons">
+</div>
+<div class="foot-bg">
+<div class="footbar">
+  <div class="l-foot">
+  <ul>
+    <li class="footnav"><a href="#">Advertising</a></li>
+    <li class="footnav"><a href="#">Business</a></li>
+    <li class="footnav"><a href="#">About</a></li>
+    </ul>
+  </div>
+  <div class="r-foot">
+    <ul>
+      <li class="footnav"><a href="#">Privacy</a></li>
+      <li class="footnav"><a href="#">Terms</a></li>
+      <li class="footnav"><a href="#">Settings</a></li>
+    </ul>
+  </div>
+</div>
 </div>
 </body>
 </html>
