Fixed footbar to bottom

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en-GB">
+
 <head>
-  <title>Google</title>
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<title>Google</title>
+
+<link rel="stylesheet" href="stylesheet.css" type="text/css">
+ 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="navbar">
@@ -24,22 +29,40 @@
 </div>
 <div class="buttons">
 </div>
-<div class="foot-bg">
+
+<div class="wrapper">
 <div class="footbar">
-  <div class="l-foot">
-  <ul>
-    <li class="footnav"><a href="#">Advertising</a></li>
-    <li class="footnav"><a href="#">Business</a></li>
-    <li class="footnav"><a href="#">About</a></li>
-    </ul>
-  </div>
-  <div class="r-foot">
-    <ul>
-      <li class="footnav"><a href="#">Privacy</a></li>
-      <li class="footnav"><a href="#">Terms</a></li>
-      <li class="footnav"><a href="#">Settings</a></li>
-    </ul>
-  </div>
+
+<div class="l-foot">
+
+<ul>
+    
+<li class="footnav"><a href="#">Advertising</a></li>
+  
+<li class="footnav"><a href="#">Business</a></li>
+
+<li class="footnav"><a href="#">About</a></li>
+   
+</ul>
+
+</div>
+  
+<div class="r-foot">
+
+<ul>
+
+<li class="footnav"><a href="#">Privacy</a></li>
+
+<li class="footnav"><a href="#">Terms</a></li>
+ <li class="footnav"><a href="#">Settings</a></li>
+ 
+</ul>
+
+</div>
+
+</div>
+</div>
+</div>
 </div>
 </div>
 </body>
