Add font awesome icons and search button

--- a/index.html
+++ b/index.html
@@ -1,50 +1,45 @@
-<!DOCTYPE html>
-<html lang="en-GB">
+<DOCTYPE! html>
+<html>
 <head>
-<title>Google</title>
-<link rel="stylesheet" href="stylesheet.css" type="text/css">
+<title>Youtube</title>
+<link href='style.css' type='text/css' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a href="#">Gmail</a></li>
-      <li><a href="#">Images</a></li>
-      <li><a href="#"><i class="fa fa-th fa-lg" aria-hidden="true"></i></a></li>
-      <li><a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a></li>
-      <li><a href="#"><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
-</a></li>
-    </ul>
-  </div>
-  <div class="logo">
-  <img class="logoimage" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" alt="Google Logo" />
+<div class='navbar'>
+<div class='left-nav'>
+<a href='#'><i class="fa fa-bars" aria-hidden="true"></i></a>
+<a href='#'>Logo</a>
 </div>
-<div class="searchbar">
-  <form>
-<input class="search" title="search" type="text"/>
+<div class='searchbar'>
+<form>
+<input class='search' title='search' type='text' placeholder='Search'/>
 </form>
+<button class='search-button'><i class="fa fa-search" aria-hidden="true"></i></button>
 </div>
-<div class="buttons">
-  <button>Google Search</button>
-  <button>I'm Feeling Lucky</button>
-</div>
-<div class="wrapper">
-<div class="footbar">
-<div class="l-foot-ul">
 <ul>
-<li class="foot-li"><a href="#">Advertising</a></li>
-<li class="foot-li"><a href="#">Business</a></li>
-<li class="foot-li"><a href="#">About</a></li>
+<li><a href='#'>Upload</a></li>
+<li><a href='#'>Apps</a></li>
+<li><a href='#'>Settings</a></li>
+<li><a id='sign-in' href='#'>Sign In</a></li>
 </ul>
 </div>
-<div class="r-foot-ul">
-<ul>
-<li class="foot-li"><a href="#">Privacy</a></li>
-<li class="foot-li"><a href="#">Terms</a></li>
-<li class="foot-li"><a href="#">Settings</a></li>
-</ul>
+<div class='video'>
+<video src='#' controls></video>
+<p>THIS SHOULD PROBABLY BE AN iFRAME!!!!!!!!!!!!</p>
 </div>
+<div class='title'>
+<h1>Title of Video</h1>
 </div>
+<div class='views'>
+<p>1434 Views</p>
+</div>
+<div class='description'>
+</div>
+<div class='comments'>
+</div>
+<div class='sidebar'>
+<p>PROBABLY AN ASIDE!!!!!</p>
 </div>
 </body>
 </html>
