--- a/index.html
+++ b/index.html
@@ -1,45 +1,69 @@
-<DOCTYPE! html>
-<html>
+<!DOCTYPE html>
+
+<html lang="en-GB">
+
 <head>
-<title>Youtube</title>
-<link href='style.css' type='text/css' rel='stylesheet'>
+
+<title>Google</title>
+
+<link rel="stylesheet" href="stylesheet.css" type="text/css">
+ 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div class='navbar'>
-<div class='left-nav'>
-<a href='#'><i class="fa fa-bars" aria-hidden="true"></i></a>
-<a href='#'>Logo</a>
+  <div class="navbar">
+    <ul>
+      <li><a href="#">Gmail</a></li>
+      <li><a href="#">Images</a></li>
+      <li><a href="#"><i class="fa fa-th fa-lg" aria-hidden="true"></i></a></li>
+<li><a>Bell</a></li>
+<li><a>Account</a></li>
+    </ul>
+  <div class="logo">
+  <img class="logoimage" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" atl="Google Logo" />
 </div>
-<div class='searchbar'>
-<form>
-<input class='search' title='search' type='text' placeholder='Search'/>
+<div class="searchbar">
+  <form>
+<input class="search" title="search" type="text"/>
 </form>
-<button class='search-button'><i class="fa fa-search" aria-hidden="true"></i></button>
 </div>
+<div class="buttons">
+</div>
+
+<div class="wrapper">
+<div class="footbar">
+
+<div class="l-foot">
+
 <ul>
-<li><a href='#'>Upload</a></li>
-<li><a href='#'>Apps</a></li>
-<li><a href='#'>Settings</a></li>
-<li><a id='sign-in' href='#'>Sign In</a></li>
+    
+<li class="footnav"><a href="#">Advertising</a></li>
+  
+<li class="footnav"><a href="#">Business</a></li>
+
+<li class="footnav"><a href="#">About</a></li>
+   
 </ul>
+
 </div>
-<div class='video'>
-<video src='#' controls></video>
-<p>THIS SHOULD PROBABLY BE AN iFRAME!!!!!!!!!!!!</p>
+  
+<div class="r-foot">
+
+<ul>
+
+<li class="footnav"><a href="#">Privacy</a></li>
+
+<li class="footnav"><a href="#">Terms</a></li>
+ <li class="footnav"><a href="#">Settings</a></li>
+ 
+</ul>
+
 </div>
-<div class='title'>
-<h1>Title of Video</h1>
+
 </div>
-<div class='views'>
-<p>1434 Views</p>
 </div>
-<div class='description'>
 </div>
-<div class='comments'>
 </div>
-<div class='sidebar'>
-<p>PROBABLY AN ASIDE!!!!!</p>
 </div>
 </body>
 </html>
