--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
-
 <html lang="en-GB">
-
 <head>
-
 <title>Google</title>
-
 <link rel="stylesheet" href="stylesheet.css" type="text/css">
- 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -16,11 +11,13 @@
       <li><a href="#">Gmail</a></li>
       <li><a href="#">Images</a></li>
       <li><a href="#"><i class="fa fa-th fa-lg" aria-hidden="true"></i></a></li>
-<li><a>Bell</a></li>
-<li><a>Account</a></li>
+      <li><a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a></li>
+      <li><a href="#"><i class="fa fa-user-circle fa-2x" aria-hidden="true"></i>
+</a></li>
     </ul>
+  </div>
   <div class="logo">
-  <img class="logoimage" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" atl="Google Logo" />
+  <img class="logoimage" src="https://cdn.vox-cdn.com/thumbor/Pkmq1nm3skO0-j693JTMd7RL0Zk=/0x0:2012x1341/1200x800/filters:focal(0x0:2012x1341)/cdn.vox-cdn.com/uploads/chorus_image/image/47070706/google2.0.0.jpg" alt="Google Logo" />
 </div>
 <div class="searchbar">
   <form>
@@ -28,40 +25,24 @@
 </form>
 </div>
 <div class="buttons">
+  <button>Google Search</button>
+  <button>I'm Feeling Lucky</button>
 </div>
-
 <div class="wrapper">
 <div class="footbar">
-
-<div class="l-foot">
-
+<div class="l-foot-ul">
 <ul>
-    
-<li class="footnav"><a href="#">Advertising</a></li>
-  
-<li class="footnav"><a href="#">Business</a></li>
-
-<li class="footnav"><a href="#">About</a></li>
-   
+<li class="foot-li"><a href="#">Advertising</a></li>
+<li class="foot-li"><a href="#">Business</a></li>
+<li class="foot-li"><a href="#">About</a></li>
 </ul>
-
 </div>
-  
-<div class="r-foot">
-
+<div class="r-foot-ul">
 <ul>
-
-<li class="footnav"><a href="#">Privacy</a></li>
-
-<li class="footnav"><a href="#">Terms</a></li>
- <li class="footnav"><a href="#">Settings</a></li>
- 
+<li class="foot-li"><a href="#">Privacy</a></li>
+<li class="foot-li"><a href="#">Terms</a></li>
+<li class="foot-li"><a href="#">Settings</a></li>
 </ul>
-
-</div>
-
-</div>
-</div>
 </div>
 </div>
 </div>
